# MarchingCubes

./: .gitignore  .gitmodules  BUILD_NOTES.txt  CMakeLists.txt  Jolt_Cmake.cmake  README.md  TC-mingw.cmake  TODO.norg  build.sh  build_dist.sh  build_mingw.sh  debug.sh  files.txt  generate_compile_commands.sh  package.sh  run.sh
assets/: magujo-hitbox.blend  magujo-hitbox.blend1  magujo-hitbox.glb  magujo-hitbox.json  magujo.blend  magujo.blend1  magujo.fbx  magujo.glb  magujo.mtl
assets/earth/: earth.fbx
assets/magujo/: cone.mtl  magujo-big.glb  magujo.hitbox  magujo.mtl
assets/prim/: bigsphere-hitbox.json  bigsphere.glb
attribution/stb/: LICENSE.txt
include/: ALErrors.hpp  Archive.hpp  Assets.hpp  Audio.hpp  Bitmap.hpp  Camera.hpp  Chunk.hpp  Client.hpp  Components.hpp  Compression.hpp  Crash.hpp  Cubemap.hpp  CustomVec.hpp  Files.hpp  Frustum.hpp  GLErrors.hpp  Image.hpp  InputHandler.hpp  Json.hpp  Logs.hpp  LookupTable.hpp  Looper.hpp  ObjectInfo.hpp  Phys.hpp  PhysRenderer.hpp  Player.hpp  Profiling.hpp  QuadContainer.hpp  Renderer.hpp  Settings.hpp  Shader.hpp  TextureArray.hpp  VertContainer.hpp  Vertex.hpp  WindowManager.hpp  World.hpp  common.hpp  embree.hpp  types.hpp
saves/: format.txt
shaders/: axis.vert  basic.frag.glsl  basic.vert  basic.vert.glsl  insert.frag  insert.vert.glsl  instanced.vert  lighting.vert  lighting_models.frag  lighting_models.vert  lighting_per_vert.frag.glsl  lighting_per_vert.vert  model_normals.vert  normals.frag.glsl  normals.gs  normals.vert  outline.frag  outline.vert.glsl  points.frag.glsl  points.vert  points.vert.glsl  selected_models.frag.glsl  skybox.frag  skybox.vert  skybox.vert.glsl
src/: ALErrors.cpp  Archive.cpp  Assets.cpp  Audio.cpp  Chunk.cpp  Client.cpp  Crash.cpp  Cubemap.cpp  Files.cpp  GLErrors.cpp  Image.cpp  InputHandler.cpp  Logs.cpp  LookupTable.cpp  Phys.cpp  PhysRenderer.cpp  Player.cpp  Renderer.cpp  Settings.cpp  Shader.cpp  TextureArray.cpp  WindowManager.cpp  World.cpp  common.cpp  embree.cpp  main.cpp
